@@ -1,5 +1,7 @@
 2017-11-28 (0.12.11)
 	Fix img.save(dat) to build correct indexes
+	Fix ESCm implementation bug
+	Implements ESC<n ESC>n back screen handlers
 
 2017-11-28 (0.12.10)
 	Released 82f865d61a6eba1c017b8a58e1c892f1b7d6a0c0
